--- a/scss/screens/banner.scss
+++ b/scss/screens/banner.scss
@@ -23,11 +23,30 @@ section.banner {
   .banner-bg {
     position: absolute;
     top: 35px;
-    right: -3vw;
-    width: 100%;
-    height: 745px;
-    background: url(../images/banner-bg.png) top right no-repeat;
+    right: 130px;
+    width: 60%;
+    height: 715px;
+    background: url("../images/banner/banner-bg.png") top right no-repeat;
     background-size: 100%;
+    z-index: 3;
+
+    &-1 {
+      top: 68px;
+      right: 193px;
+      width: 327px;
+      z-index: 2;
+      transform: rotate(-20deg);
+
+    }
+
+    &-2 {
+      top: 42px;
+      right: 130px;
+      width: 327px;
+      z-index: 2;
+      transform: rotate(20deg);
+
+    }
   }
 }
 
