--- a/scss/style.css
+++ b/scss/style.css
@@ -173,11 +173,24 @@ section.banner {
   section.banner .banner-bg {
     position: absolute;
     top: 35px;
-    right: -3vw;
-    width: 100%;
-    height: 745px;
-    background: url(../images/banner-bg.png) top right no-repeat;
-    background-size: 100%; }
+    right: 130px;
+    width: 60%;
+    height: 715px;
+    background: url("../images/banner/banner-bg.png") top right no-repeat;
+    background-size: 100%;
+    z-index: 3; }
+    section.banner .banner-bg-1 {
+      top: 68px;
+      right: 193px;
+      width: 327px;
+      z-index: 2;
+      transform: rotate(-20deg); }
+    section.banner .banner-bg-2 {
+      top: 42px;
+      right: 130px;
+      width: 327px;
+      z-index: 2;
+      transform: rotate(20deg); }
 
 .about-us {
   display: flex;
@@ -194,17 +207,17 @@ section.banner {
     position: absolute;
     max-width: 270px; }
     .about-us p.top-left {
-      top: -100px;
+      top: 30px;
       left: 0; }
     .about-us p.top-right {
-      top: -100px;
-      left: 910px; }
+      top: -40px;
+      left: 878px; }
     .about-us p.bottom-left {
-      bottom: -530px;
+      bottom: -350px;
       left: 0; }
     .about-us p.bottom-right {
       max-width: 310px;
-      bottom: -530px;
+      bottom: -390px;
       left: 830px; }
   .about-us .phone {
     position: relative;
@@ -235,7 +248,8 @@ section.banner {
     width: 54px;
     height: 90px;
     background: url("../images/about-us/money.svg") center no-repeat;
-    background-size: 100%; }
+    background-size: 100%;
+    z-index: 1; }
   .about-us .gift-box {
     position: absolute;
     top: 183px;
@@ -243,7 +257,8 @@ section.banner {
     width: 74px;
     height: 93px;
     background: url("../images/about-us/gift-box.svg") center no-repeat;
-    background-size: 100%; }
+    background-size: 100%;
+    z-index: 1; }
   .about-us .clock {
     position: absolute;
     top: 352px;
@@ -251,7 +266,8 @@ section.banner {
     width: 62px;
     height: 51px;
     background: url("../images/about-us/clock.svg") center no-repeat;
-    background-size: 100%; }
+    background-size: 100%;
+    z-index: 1; }
   .about-us .book {
     position: absolute;
     bottom: -12px;
@@ -259,7 +275,13 @@ section.banner {
     width: 115px;
     height: 78px;
     background: url("../images/about-us/book.svg") center no-repeat;
-    background-size: 100%; }
+    background-size: 100%;
+    z-index: 1; }
+  .about-us #animate-about-us {
+    position: absolute;
+    left: -337px;
+    top: -122px;
+    width: 1283px; }
 
 .steps {
   padding: 100px 0;
@@ -273,16 +295,14 @@ section.banner {
     background-color: #ffffff;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5); }
     .steps-item .icon {
-      width: 126px;
+      width: 86px;
       height: 126px;
       margin: 0 auto;
       background: no-repeat center bottom; }
       .steps-item .icon-money {
-        background-image: url("../images/money.svg"); }
+        width: 96px; }
       .steps-item .icon-star {
-        background-image: url("../images/star.svg"); }
-      .steps-item .icon-magic-wand {
-        background-image: url("../images/magic-wand.svg"); }
+        width: 126px; }
     .steps-item p {
       padding: 26px 0; }
       .steps-item p:not(:last-child) {
@@ -311,6 +331,8 @@ section.banner {
   .counter #clock {
     max-width: 475px;
     margin: 0 auto; }
+    .counter #clock .flip-clock-divider.seconds {
+      display: none; }
 
 .benefits {
   text-align: center;
