--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,6 +1,12 @@
 .btn {
+  position: relative;
+  z-index: 999;
   background-color: $color-button;
   box-shadow: 0 10px 20px 0 rgba(96, 165, 16, 0.42);
+
+  &:hover {
+   background-color: $color-button-hover;
+  }
 
   &:focus {
     box-shadow: 0 10px 20px 0 rgba(96, 165, 16, 0.42);
