--- a/scss/style.css
+++ b/scss/style.css
@@ -35,8 +35,6 @@ a:hover {
   z-index: 999;
   background-color: #99cc33;
   box-shadow: 0 10px 20px 0 rgba(96, 165, 16, 0.42); }
-  .btn:hover {
-    background-color: red; }
   .btn:focus {
     box-shadow: 0 10px 20px 0 rgba(96, 165, 16, 0.42); }
   .btn-language, .btn-login {
@@ -65,6 +63,8 @@ a:hover {
     font-size: 16px;
     color: #fff;
     text-transform: uppercase; }
+    .btn-create-app:hover {
+      background-color: #60A510; }
 
 .header {
   padding: 20px 0;
