--- a/scss/screens/banner.scss
+++ b/scss/screens/banner.scss
@@ -22,75 +22,12 @@ section.banner {
 
   .banner-bg {
     position: absolute;
-    top: 75px;
-    right: 100px;
-    width: 370px;
-    height: 715px;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    background-image: url("../images/banner/banner-bg.png");
-    z-index: 3;
-    background-size: 355px;
-
-    &-2 {
-      position: absolute;
-      top: 77px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      z-index: 2;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url("../images/banner/banner-bg-2.png");
-      background-size: 319px;
-      animation-fill-mode: forwards;
-      opacity: 0;
-    }
-
-    &-3 {
-      position: absolute;
-      top: 77px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      z-index: 2;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url("../images/banner/banner-bg-3.png");
-      background-size: 319px;
-      animation-fill-mode: forwards;
-      opacity: 0;
-    }
-
-    &-4 {
-      position: absolute;
-      top: 152px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url("../images/banner/banner-bg-4.png");
-      background-size: 293px;
-      animation-fill-mode: forwards;
-      opacity: 0;
-      z-index: 1;
-    }
-
-    &-5 {
-      position: absolute;
-      top: 152px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url(../images/banner/banner-bg-5.png);
-      background-size: 303px;
-      animation-fill-mode: forwards;
-      opacity: 0;
-      z-index: 2;
-    }
+    top: 35px;
+    right: -3vw;
+    width: 100%;
+    height: 745px;
+    background: url(../images/banner-bg.png) top right no-repeat;
+    background-size: 100%;
   }
 }
 
