--- a/scss/style.css
+++ b/scss/style.css
@@ -31,12 +31,8 @@ a:hover {
   text-decoration: none; }
 
 .btn {
-  position: relative;
-  z-index: 999;
   background-color: #99cc33;
   box-shadow: 0 10px 20px 0 rgba(96, 165, 16, 0.42); }
-  .btn:hover {
-    background-color: red; }
   .btn:focus {
     box-shadow: 0 10px 20px 0 rgba(96, 165, 16, 0.42); }
   .btn-language, .btn-login {
@@ -176,67 +172,12 @@ section.banner {
     padding: 17px 23px 17px 22px; }
   section.banner .banner-bg {
     position: absolute;
-    top: 75px;
-    right: 100px;
-    width: 370px;
-    height: 715px;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    background-image: url("../images/banner/banner-bg.png");
-    z-index: 3;
-    background-size: 355px; }
-    section.banner .banner-bg-2 {
-      position: absolute;
-      top: 77px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      z-index: 2;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url("../images/banner/banner-bg-2.png");
-      background-size: 319px;
-      animation-fill-mode: forwards;
-      opacity: 0; }
-    section.banner .banner-bg-3 {
-      position: absolute;
-      top: 77px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      z-index: 2;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url("../images/banner/banner-bg-3.png");
-      background-size: 319px;
-      animation-fill-mode: forwards;
-      opacity: 0; }
-    section.banner .banner-bg-4 {
-      position: absolute;
-      top: 152px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url("../images/banner/banner-bg-4.png");
-      background-size: 293px;
-      animation-fill-mode: forwards;
-      opacity: 0;
-      z-index: 1; }
-    section.banner .banner-bg-5 {
-      position: absolute;
-      top: 152px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url(../images/banner/banner-bg-5.png);
-      background-size: 303px;
-      animation-fill-mode: forwards;
-      opacity: 0;
-      z-index: 2; }
+    top: 35px;
+    right: -3vw;
+    width: 100%;
+    height: 745px;
+    background: url(../images/banner-bg.png) top right no-repeat;
+    background-size: 100%; }
 
 .about-us {
   display: flex;
@@ -253,17 +194,17 @@ section.banner {
     position: absolute;
     max-width: 270px; }
     .about-us p.top-left {
-      top: 30px;
+      top: -100px;
       left: 0; }
     .about-us p.top-right {
-      top: -40px;
-      left: 878px; }
+      top: -100px;
+      left: 910px; }
     .about-us p.bottom-left {
-      bottom: -350px;
+      bottom: -530px;
       left: 0; }
     .about-us p.bottom-right {
       max-width: 310px;
-      bottom: -390px;
+      bottom: -530px;
       left: 830px; }
   .about-us .phone {
     position: relative;
@@ -274,60 +215,46 @@ section.banner {
     background-size: 90%; }
   .about-us .message {
     position: absolute;
-    left: 153px;
-    top: -22px;
-    width: 134px;
+    left: 160px;
+    top: -15px;
+    width: 150px;
     height: 141px;
-    background: url("../images/about-us/message.svg") center no-repeat;
-    background-size: 100%; }
+    background: url("../images/about-us/message.svg") center no-repeat; }
   .about-us .paint-can {
     position: absolute;
-    bottom: 65px;
+    bottom: 42px;
     left: 368px;
-    width: 130px;
-    height: 108px;
+    width: 150px;
+    height: 130px;
     background: url("../images/about-us/panit-can.svg") top right no-repeat, url("../images/about-us/brush.svg") bottom left no-repeat; }
   .about-us .money {
     position: absolute;
     top: 116px;
-    left: 62px;
-    width: 54px;
-    height: 90px;
-    background: url("../images/about-us/money.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1; }
+    left: 46px;
+    width: 60px;
+    height: 100px;
+    background: url("../images/about-us/money.svg") center no-repeat; }
   .about-us .gift-box {
     position: absolute;
-    top: 183px;
-    right: 23px;
-    width: 74px;
+    top: 172px;
+    right: -6px;
+    width: 83px;
     height: 93px;
-    background: url("../images/about-us/gift-box.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1; }
+    background: url("../images/about-us/gift-box.svg") center no-repeat; }
   .about-us .clock {
     position: absolute;
-    top: 352px;
-    left: 68px;
-    width: 62px;
+    top: 330px;
+    left: 40px;
+    width: 71px;
     height: 51px;
-    background: url("../images/about-us/clock.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1; }
+    background: url("../images/about-us/clock.svg") center no-repeat; }
   .about-us .book {
     position: absolute;
-    bottom: -12px;
-    left: 273px;
-    width: 115px;
+    bottom: -27px;
+    left: 241px;
+    width: 129px;
     height: 78px;
-    background: url("../images/about-us/book.svg") center no-repeat;
-    background-size: 100%;
-    z-index: 1; }
-  .about-us #animate-about-us {
-    position: absolute;
-    left: -337px;
-    top: -122px;
-    width: 1283px; }
+    background: url("../images/about-us/book.svg") center no-repeat; }
 
 .steps {
   padding: 100px 0;
@@ -341,14 +268,16 @@ section.banner {
     background-color: #ffffff;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5); }
     .steps-item .icon {
-      width: 86px;
+      width: 126px;
       height: 126px;
       margin: 0 auto;
       background: no-repeat center bottom; }
       .steps-item .icon-money {
-        width: 96px; }
+        background-image: url("../images/money.svg"); }
       .steps-item .icon-star {
-        width: 126px; }
+        background-image: url("../images/star.svg"); }
+      .steps-item .icon-magic-wand {
+        background-image: url("../images/magic-wand.svg"); }
     .steps-item p {
       padding: 26px 0; }
       .steps-item p:not(:last-child) {
@@ -377,15 +306,12 @@ section.banner {
   .counter #clock {
     max-width: 475px;
     margin: 0 auto; }
-    .counter #clock .flip-clock-divider.seconds {
-      display: none; }
 
 .benefits {
   text-align: center;
   padding: 120px 0; }
   .benefits .title {
-    margin-bottom: 100px;
-    font-weight: 500; }
+    margin-bottom: 100px; }
   .benefits .subtitle {
     margin-bottom: 14px; }
   .benefits p {
