--- a/scss/style.css
+++ b/scss/style.css
@@ -31,6 +31,8 @@ a:hover {
   text-decoration: none; }
 
 .btn {
+  position: relative;
+  z-index: 999;
   background-color: #99cc33;
   box-shadow: 0 10px 20px 0 rgba(96, 165, 16, 0.42); }
   .btn:focus {
@@ -174,12 +176,67 @@ section.banner {
     padding: 17px 23px 17px 22px; }
   section.banner .banner-bg {
     position: absolute;
-    top: 35px;
-    right: -3vw;
-    width: 100%;
-    height: 745px;
-    background: url(../images/banner-bg.png) top right no-repeat;
-    background-size: 100%; }
+    top: 75px;
+    right: 100px;
+    width: 370px;
+    height: 715px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-image: url("../images/banner/banner-bg.png");
+    z-index: 3;
+    background-size: 329px; }
+    section.banner .banner-bg-2 {
+      position: absolute;
+      top: 77px;
+      left: 220px;
+      width: 370px;
+      height: 715px;
+      z-index: 2;
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      background-image: url("../images/banner/banner-bg-2.png");
+      background-size: 300px;
+      animation-fill-mode: forwards;
+      opacity: 0; }
+    section.banner .banner-bg-3 {
+      position: absolute;
+      top: 77px;
+      left: 220px;
+      width: 370px;
+      height: 715px;
+      z-index: 2;
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      background-image: url("../images/banner/banner-bg-3.png");
+      background-size: 300px;
+      animation-fill-mode: forwards;
+      opacity: 0; }
+    section.banner .banner-bg-4 {
+      position: absolute;
+      top: 152px;
+      left: 220px;
+      width: 370px;
+      height: 715px;
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      background-image: url("../images/banner/banner-bg-4.png");
+      background-size: 280px;
+      animation-fill-mode: forwards;
+      opacity: 0;
+      z-index: 1; }
+    section.banner .banner-bg-5 {
+      position: absolute;
+      top: 152px;
+      left: 220px;
+      width: 370px;
+      height: 715px;
+      background-repeat: no-repeat;
+      background-position: 0 0;
+      background-image: url(../images/banner/banner-bg-5.png);
+      background-size: 282px;
+      animation-fill-mode: forwards;
+      opacity: 0;
+      z-index: 2; }
 
 .about-us {
   display: flex;
@@ -196,17 +253,17 @@ section.banner {
     position: absolute;
     max-width: 270px; }
     .about-us p.top-left {
-      top: -100px;
+      top: 30px;
       left: 0; }
     .about-us p.top-right {
-      top: -100px;
-      left: 910px; }
+      top: -40px;
+      left: 878px; }
     .about-us p.bottom-left {
-      bottom: -530px;
+      bottom: -350px;
       left: 0; }
     .about-us p.bottom-right {
       max-width: 310px;
-      bottom: -530px;
+      bottom: -390px;
       left: 830px; }
   .about-us .phone {
     position: relative;
@@ -217,69 +274,81 @@ section.banner {
     background-size: 90%; }
   .about-us .message {
     position: absolute;
-    left: 160px;
-    top: -15px;
-    width: 150px;
+    left: 153px;
+    top: -22px;
+    width: 134px;
     height: 141px;
-    background: url("../images/about-us/message.svg") center no-repeat; }
+    background: url("../images/about-us/message.svg") center no-repeat;
+    background-size: 100%; }
   .about-us .paint-can {
     position: absolute;
-    bottom: 42px;
+    bottom: 65px;
     left: 368px;
-    width: 150px;
-    height: 130px;
+    width: 130px;
+    height: 108px;
     background: url("../images/about-us/panit-can.svg") top right no-repeat, url("../images/about-us/brush.svg") bottom left no-repeat; }
   .about-us .money {
     position: absolute;
     top: 116px;
-    left: 46px;
-    width: 60px;
-    height: 100px;
-    background: url("../images/about-us/money.svg") center no-repeat; }
+    left: 62px;
+    width: 54px;
+    height: 90px;
+    background: url("../images/about-us/money.svg") center no-repeat;
+    background-size: 100%;
+    z-index: 1; }
   .about-us .gift-box {
     position: absolute;
-    top: 172px;
-    right: -6px;
-    width: 83px;
+    top: 183px;
+    right: 23px;
+    width: 74px;
     height: 93px;
-    background: url("../images/about-us/gift-box.svg") center no-repeat; }
+    background: url("../images/about-us/gift-box.svg") center no-repeat;
+    background-size: 100%;
+    z-index: 1; }
   .about-us .clock {
     position: absolute;
-    top: 330px;
-    left: 40px;
-    width: 71px;
+    top: 352px;
+    left: 68px;
+    width: 62px;
     height: 51px;
-    background: url("../images/about-us/clock.svg") center no-repeat; }
+    background: url("../images/about-us/clock.svg") center no-repeat;
+    background-size: 100%;
+    z-index: 1; }
   .about-us .book {
     position: absolute;
-    bottom: -27px;
-    left: 241px;
-    width: 129px;
+    bottom: -12px;
+    left: 273px;
+    width: 115px;
     height: 78px;
-    background: url("../images/about-us/book.svg") center no-repeat; }
+    background: url("../images/about-us/book.svg") center no-repeat;
+    background-size: 100%;
+    z-index: 1; }
+  .about-us #animate-about-us {
+    position: absolute;
+    left: -337px;
+    top: -122px;
+    width: 1283px; }
 
 .steps {
   padding: 100px 0;
   text-align: center;
   font-size: 18px; }
   .steps-item {
-    min-height: 490px;
+    min-height: 500px;
     padding: 0 33px;
     margin: 60px 0;
     border-radius: 6px;
     background-color: #ffffff;
     box-shadow: 0 0 10px 0 rgba(230, 230, 230, 0.5); }
     .steps-item .icon {
-      width: 126px;
+      width: 86px;
       height: 126px;
       margin: 0 auto;
       background: no-repeat center bottom; }
       .steps-item .icon-money {
-        background-image: url("../images/money.svg"); }
+        width: 96px; }
       .steps-item .icon-star {
-        background-image: url("../images/star.svg"); }
-      .steps-item .icon-magic-wand {
-        background-image: url("../images/magic-wand.svg"); }
+        width: 126px; }
     .steps-item p {
       padding: 26px 0; }
       .steps-item p:not(:last-child) {
@@ -308,12 +377,15 @@ section.banner {
   .counter #clock {
     max-width: 475px;
     margin: 0 auto; }
+    .counter #clock .flip-clock-divider.seconds {
+      display: none; }
 
 .benefits {
   text-align: center;
   padding: 120px 0; }
   .benefits .title {
-    margin-bottom: 100px; }
+    margin-bottom: 100px;
+    font-weight: 500; }
   .benefits .subtitle {
     margin-bottom: 14px; }
   .benefits p {
