--- a/scss/style.css
+++ b/scss/style.css
@@ -160,83 +160,85 @@ a:hover {
     color: #35344c; }
 
 section.banner {
-  min-height: 100vh;
   overflow: hidden; }
-  section.banner .title {
-    margin-top: 162px;
-    text-align: left;
-    font-weight: 500;
-    font-size: 40px; }
-  section.banner .subtitle {
-    margin: 24px 0 33px 0;
-    font-weight: 300;
-    line-height: 32px;
-    font-size: 24px; }
-  section.banner .btn-create-app {
-    padding: 17px 23px 17px 22px; }
-  section.banner .banner-bg {
+  section.banner > .container {
+    min-height: calc(100vh - 73px); }
+  section.banner .title-container {
     position: absolute;
-    top: 75px;
+    top: 50%;
+    max-width: 420px;
+    transform: translateY(-60%); }
+    section.banner .title-container .title {
+      text-align: left;
+      font-weight: 500;
+      font-size: 40px; }
+    section.banner .title-container .subtitle {
+      margin: 24px 0 33px 0;
+      font-weight: 300;
+      line-height: 32px;
+      font-size: 24px; }
+    section.banner .title-container .btn-create-app {
+      padding: 17px 23px 17px 22px; }
+  section.banner .banner-container {
+    position: absolute;
     right: 100px;
-    width: 370px;
-    height: 715px;
+    top: 50%;
+    width: 380px;
+    height: 565px;
+    transform: translateY(-50%); }
+  section.banner .banner-bg {
+    position: relative;
+    width: 330px;
+    height: 630px;
     background-repeat: no-repeat;
-    background-position: 0 0;
+    background-position: center;
     background-image: url("../images/banner/banner-bg.png");
     z-index: 3;
-    background-size: 329px; }
+    background-size: 337px; }
     section.banner .banner-bg-2 {
       position: absolute;
-      top: 77px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
+      top: 38px;
+      right: 70px;
+      width: 285px;
+      height: 525px;
       z-index: 2;
-      background-repeat: no-repeat;
-      background-position: 0 0;
       background-image: url("../images/banner/banner-bg-2.png");
       background-size: 300px;
       animation-fill-mode: forwards;
       opacity: 0; }
     section.banner .banner-bg-3 {
       position: absolute;
-      top: 77px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
+      top: 10px;
+      right: 70px;
+      width: 285px;
+      height: 525px;
       z-index: 2;
-      background-repeat: no-repeat;
-      background-position: 0 0;
       background-image: url("../images/banner/banner-bg-3.png");
       background-size: 300px;
       animation-fill-mode: forwards;
       opacity: 0; }
     section.banner .banner-bg-4 {
       position: absolute;
-      top: 152px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      background-repeat: no-repeat;
-      background-position: 0 0;
+      top: 85px;
+      right: 89px;
+      width: 285px;
+      height: 525px;
       background-image: url("../images/banner/banner-bg-4.png");
       background-size: 280px;
       animation-fill-mode: forwards;
-      opacity: 0;
-      z-index: 1; }
+      z-index: 1;
+      opacity: 0; }
     section.banner .banner-bg-5 {
       position: absolute;
-      top: 152px;
-      left: 220px;
-      width: 370px;
-      height: 715px;
-      background-repeat: no-repeat;
-      background-position: 0 0;
-      background-image: url(../images/banner/banner-bg-5.png);
+      top: 85px;
+      right: 89px;
+      width: 285px;
+      height: 525px;
+      background-image: url("../images/banner/banner-bg-5.png");
       background-size: 282px;
       animation-fill-mode: forwards;
-      opacity: 0;
-      z-index: 2; }
+      z-index: 2;
+      opacity: 0; }
 
 .about-us {
   display: flex;
